# aidos-template

./: .env.example  .gitignore  AGENTS.md  ORGANIZER.md  README.md  calibrate.py  check_clips.py  clear_clips.py  fetch_buckets.py  fetch_real_pbp.py  fix_game.py  fix_timeline.py  poll_clips.py  reset_moments.py  test.ps1  test.py  test_generate_clips.py  test_nba_video.py  test_phase2.py  test_phase3.py  test_phase4.py  test_real_moments.py
.devcontainer/: Dockerfile  Dockerfile.local  devcontainer.json
.devcontainer/image-files/: keybindings.json
.github/workflows/: build-devcontainer-image.yml
.opencode/skills/c4-diagrams/: SKILL.md
backend/: pyproject.toml  test.db
backend/app/: main.py
backend/app/api/: auth.py  clips.py  games.py  moments.py
backend/app/db/: database.py
backend/app/models/: clip.py  game.py  moment.py  user.py
backend/app/schemas/: clip.py  game.py  moment.py  user.py
backend/app/services/: clip_service.py  moment_service.py  nba_service.py  refinement_service.py  timeline_service.py
backend/app/utils/: auth.py  config.py  constants.py  ffmpeg.py  paths.py
backend/data/mock/: play_by_play_sample.json  real_play_by_play.json
backend/tests/: conftest.py  test_clip_service.py  test_moment_service.py  test_refinement_service.py  test_timeline_service.py
docs/: ARCHITECTURE.md  PHASES.md  PROJECT.md  ROADMAP.html  TODO.md
docs/phases/: phase-0-setup.md  phase-1-backend.md  phase-2-nba-data.md  phase-3-timeline.md  phase-4-clipping.md  phase-5a-full-game-pipeline.md  phase-7-hackathon-frontend.md
